kubenetes-files/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-1
  labels:
    app: backend-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-1
  template:
    metadata:
      labels:
        app: backend-1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
