kubenetes-files/deployment3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-3
  labels:
    app: backend-3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-3
  template:
    metadata:
      labels:
        app: backend-3
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
