kubenetes-files/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-1-service
spec:
  selector:
    app: backend-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
