kubenetes-files/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-2-service
spec:
  selector:
    app: backend-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
