kubenetes-files/service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-3-service
spec:
  selector:
    app: backend-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
